tests/success/comptime/pointer_arithmetic.bz
function test()
{
	(consteval {
		let t = [i32, i32]();
		&t[0] + 1 - 1;
	});
}
